@@ -6,6 +6,8 @@ using System.Collections.Generic;
 using System.Data.Entity;
 using System.Linq;
 using System.Linq.Expressions;
+using System.Threading;
+using System.Threading.Tasks;
 using Saritasa.Tools.Domain;
 using Saritasa.Tools.Domain.Exceptions;
 
@@ -16,7 +18,7 @@ namespace Saritasa.Tools.EF
     /// </summary>
     /// <typeparam name="TEntity">Entity type.</typeparam>
     /// <typeparam name="TContext">Database context type.</typeparam>
-    public class EFRepository<TEntity, TContext> : IRepository<TEntity>
+    public class EFRepository<TEntity, TContext> : IRepository<TEntity>, IAsyncRepository<TEntity>
         where TEntity : class where TContext : DbContext
     {
         /// <summary>
@@ -43,6 +45,8 @@ namespace Saritasa.Tools.EF
             Set = Context.Set<TEntity>();
         }
 
+        #region IRepository
+
         /// <inheritdoc />
         public virtual void Add(TEntity entity)
         {
@@ -58,14 +62,14 @@ namespace Saritasa.Tools.EF
         /// <inheritdoc />
         public virtual IEnumerable<TEntity> Find(Expression<Func<TEntity, bool>> predicate)
         {
-            return Set.Where(predicate).ToList();
+            return Set.Where(predicate).ToArray();
         }
 
         /// <inheritdoc />
         public virtual IEnumerable<TEntity> Find(Expression<Func<TEntity, bool>> predicate,
             IEnumerable<Expression<Func<TEntity, object>>> includes)
         {
-            return Set.Where(predicate).Include(includes);
+            return Set.Where(predicate).Include(includes).ToArray();
         }
 
         /// <inheritdoc />
@@ -82,13 +86,13 @@ namespace Saritasa.Tools.EF
         /// <inheritdoc />
         public virtual IEnumerable<TEntity> GetAll()
         {
-            return Set.ToList();
+            return Set.ToArray();
         }
 
         /// <inheritdoc />
         public virtual IEnumerable<TEntity> GetAll(IEnumerable<Expression<Func<TEntity, object>>> includes)
         {
-            return Set.Include(includes).ToList();
+            return Set.Include(includes).ToArray();
         }
 
         /// <inheritdoc />
@@ -102,5 +106,90 @@ namespace Saritasa.Tools.EF
         {
             Set.RemoveRange(entities);
         }
+
+        #endregion
+
+        #region IAsyncRepository
+
+        /// <inheritdoc />
+        public virtual Task AddAsync(TEntity entity, CancellationToken cancellationToken)
+        {
+            Set.Add(entity);
+            return Task.FromResult(1);
+        }
+
+        /// <inheritdoc />
+        public virtual Task AddRangeAsync(IEnumerable<TEntity> entities, CancellationToken cancellationToken)
+        {
+            Set.AddRange(entities);
+            return Task.FromResult(1);
+        }
+
+        /// <inheritdoc />
+        public virtual async Task<IEnumerable<TEntity>> FindAsync(Expression<Func<TEntity, bool>> predicate,
+            CancellationToken cancellationToken)
+        {
+            return await Set.Where(predicate).ToArrayAsync(cancellationToken).ConfigureAwait(false);
+        }
+
+        /// <inheritdoc />
+        public virtual async Task<IEnumerable<TEntity>> FindAsync(
+            Expression<Func<TEntity, bool>> predicate,
+            IEnumerable<Expression<Func<TEntity, object>>> includes,
+            CancellationToken cancellationToken)
+        {
+            var query = Context.Set<TEntity>().Where(predicate);
+            foreach (var include in includes)
+            {
+                query = query.Include(include);
+            }
+            return await query.ToArrayAsync(cancellationToken).ConfigureAwait(false);
+        }
+
+        /// <inheritdoc />
+        public virtual async Task<TEntity> GetAsync(object[] keyValues, CancellationToken cancellationToken)
+        {
+            var entity = await Set.FindAsync(cancellationToken, keyValues).ConfigureAwait(false);
+            if (entity == null)
+            {
+                throw new NotFoundException(Properties.Strings.ObjectNotFound);
+            }
+            return entity;
+        }
+
+        /// <inheritdoc />
+        public virtual async Task<IEnumerable<TEntity>> GetAllAsync(CancellationToken cancellationToken)
+        {
+            return await Set.ToArrayAsync(cancellationToken).ConfigureAwait(false);
+        }
+
+        /// <inheritdoc />
+        public virtual async Task<IEnumerable<TEntity>> GetAllAsync(
+            IEnumerable<Expression<Func<TEntity, object>>> includes,
+            CancellationToken cancellationToken)
+        {
+            var query = Set.AsQueryable();
+            foreach (var include in includes)
+            {
+                query = query.Include(include);
+            }
+            return await query.ToArrayAsync(cancellationToken).ConfigureAwait(false);
+        }
+
+        /// <inheritdoc />
+        public virtual Task RemoveAsync(TEntity entity, CancellationToken cancellationToken)
+        {
+            Set.Remove(entity);
+            return Task.FromResult(1);
+        }
+
+        /// <inheritdoc />
+        public virtual Task RemoveRangeAsync(IEnumerable<TEntity> entities, CancellationToken cancellationToken)
+        {
+            Set.RemoveRange(entities);
+            return Task.FromResult(1);
+        }
+
+        #endregion
     }
 }
