@@ -5,6 +5,8 @@ using System;
 using System.Collections.Generic;
 using System.Linq;
 using System.Linq.Expressions;
+using System.Threading;
+using System.Threading.Tasks;
 using Microsoft.EntityFrameworkCore;
 using Saritasa.Tools.Domain;
 using Saritasa.Tools.Domain.Exceptions;
@@ -16,7 +18,7 @@ namespace Saritasa.Tools.EFCore
     /// </summary>
     /// <typeparam name="TEntity">Entity type.</typeparam>
     /// <typeparam name="TContext">Database context type.</typeparam>
-    public class EFRepository<TEntity, TContext> : IRepository<TEntity>
+    public class EFRepository<TEntity, TContext> : IRepository<TEntity>, IAsyncRepository<TEntity>
         where TEntity : class where TContext : DbContext
     {
         /// <summary>
@@ -43,6 +45,8 @@ namespace Saritasa.Tools.EFCore
             Set = Context.Set<TEntity>();
         }
 
+        #region IRepository
+
         /// <inheritdoc />
         public virtual void Add(TEntity entity)
         {
@@ -58,7 +62,7 @@ namespace Saritasa.Tools.EFCore
         /// <inheritdoc />
         public virtual IEnumerable<TEntity> Find(Expression<Func<TEntity, bool>> predicate)
         {
-            return Set.Where(predicate).ToList();
+            return Set.Where(predicate).ToArray();
         }
 
         /// <inheritdoc />
@@ -70,7 +74,7 @@ namespace Saritasa.Tools.EFCore
             {
                 query = query.Include(include);
             }
-            return query.ToList();
+            return query.ToArray();
         }
 
         /// <inheritdoc />
@@ -87,7 +91,7 @@ namespace Saritasa.Tools.EFCore
         /// <inheritdoc />
         public virtual IEnumerable<TEntity> GetAll()
         {
-            return Set.ToList();
+            return Set.ToArray();
         }
 
         /// <inheritdoc />
@@ -98,7 +102,7 @@ namespace Saritasa.Tools.EFCore
             {
                 query = query.Include(include);
             }
-            return query.ToList();
+            return query.ToArray();
         }
 
         /// <inheritdoc />
@@ -112,5 +116,88 @@ namespace Saritasa.Tools.EFCore
         {
             Set.RemoveRange(entities);
         }
+
+        #endregion
+
+        #region IAsyncRepository
+
+        /// <inheritdoc />
+        public virtual Task AddAsync(TEntity entity, CancellationToken cancellationToken)
+        {
+            return Set.AddAsync(entity, cancellationToken);
+        }
+
+        /// <inheritdoc />
+        public virtual Task AddRangeAsync(IEnumerable<TEntity> entities, CancellationToken cancellationToken)
+        {
+            return Set.AddRangeAsync(entities, cancellationToken);
+        }
+
+        /// <inheritdoc />
+        public virtual async Task<IEnumerable<TEntity>> FindAsync(Expression<Func<TEntity, bool>> predicate,
+            CancellationToken cancellationToken)
+        {
+            return await Set.Where(predicate).ToArrayAsync(cancellationToken).ConfigureAwait(false);
+        }
+
+        /// <inheritdoc />
+        public virtual async Task<IEnumerable<TEntity>> FindAsync(
+            Expression<Func<TEntity, bool>> predicate,
+            IEnumerable<Expression<Func<TEntity, object>>> includes,
+            CancellationToken cancellationToken)
+        {
+            var query = Context.Set<TEntity>().Where(predicate);
+            foreach (var include in includes)
+            {
+                query = query.Include(include);
+            }
+            return await query.ToArrayAsync(cancellationToken).ConfigureAwait(false);
+        }
+
+        /// <inheritdoc />
+        public virtual async Task<TEntity> GetAsync(object[] keyValues, CancellationToken cancellationToken)
+        {
+            var entity = await Set.FindAsync(keyValues, cancellationToken).ConfigureAwait(false);
+            if (entity == null)
+            {
+                throw new NotFoundException(Properties.Strings.ObjectNotFound);
+            }
+            return entity;
+        }
+
+        /// <inheritdoc />
+        public virtual async Task<IEnumerable<TEntity>> GetAllAsync(CancellationToken cancellationToken)
+        {
+            return await Set.ToArrayAsync(cancellationToken).ConfigureAwait(false);
+        }
+
+        /// <inheritdoc />
+        public virtual async Task<IEnumerable<TEntity>> GetAllAsync(
+            IEnumerable<Expression<Func<TEntity, object>>> includes,
+            CancellationToken cancellationToken)
+        {
+            var query = Set.AsQueryable();
+            foreach (var include in includes)
+            {
+                query = query.Include(include);
+            }
+            return await query.ToArrayAsync(cancellationToken).ConfigureAwait(false);
+        }
+
+        /// <inheritdoc />
+        public virtual Task RemoveAsync(TEntity entity, CancellationToken cancellationToken)
+        {
+            Set.Remove(entity);
+            return Task.FromResult(1);
+        }
+
+        /// <inheritdoc />
+        public virtual Task RemoveRangeAsync(IEnumerable<TEntity> entities, CancellationToken cancellationToken)
+        {
+            Set.RemoveRange(entities);
+            return Task.FromResult(1);
+        }
+
+        #endregion
     }
 }
