@@ -1,5 +1,6 @@
 ﻿0.3.0 [TBD]
 [*] Force return result (ToList) for repository methods.
+[+] Async repository implementation.
 
 0.2.1 [2017-07-11]
 [*] Fix reference to Domain assembly.
