@@ -1,5 +1,6 @@
 ﻿0.3.0 [TBD]
 [*] Force return result (ToList) for repository methods.
+[+] Async repository implementation.
 
 0.2.2 [2017-07-18]
 [*] Decreased dependencies to netstandard1.3 and net452.
