@@ -1,5 +1,6 @@
 ﻿0.2.5 [TBD]
 [*] ValidationException.ThrowFromObjectValidation takes into account MetadataType attribute.
+[+] Async repository abstraction.
 
 0.2.4 [2017-07-29]
 [*] ValidationException: Take into account error messages without member names.
